# igrca

./: README.md
CLionProjects/game/: CMakeLists.txt
CLionProjects/game/assets/: dungeon.tsx  lab.txt  lab_map.tmx  labb.csv  level2.csv  level2.txt  map.map  map.tmx  map.txt  mapa.csv  mapa.txt  mapp.txt  new_map.txt
CLionProjects/game/cmake_modules/: FindSDL2_image.cmake
CLionProjects/game/src/: Clock.hpp  Collision.cpp  Collision.hpp  Enemy.cpp  Enemy.hpp  GameLogic.cpp  GameLogic.hpp  GameObject.cpp  GameObject.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  Texture.cpp  Texture.hpp  Vector2D.cpp  Vector2D.hpp  game.cpp  game.hpp  main.cpp
CLionProjects/game/src/ECS/: Animation.hpp  BulletComponent.hpp  ColiderComponent.hpp  Components.hpp  ECS.cpp  ECS.hpp  EnemyComponent.hpp  HPComponent.hpp  Keyboard.hpp  Mouse.hpp  PetComponent.hpp  PlayerComponent.hpp  SpriteComponent.hpp  TileComponent.hpp  TrackComponent.hpp  TransformComponent.hpp  TurretComponent.hpp  buttonComponent.hpp
